# FlyRec

./: .env.example  .gitignore  CONTRIBUTING.md  FlyRecApp.spec  README.md  config.example.json  config.json  copywriting_assistant.py  demo3.py  demo3ui.py  demo4.py  flyrec_gui.py  gui_app.py  gui_app_fixed.py  legacy_hold_to_talk.py  main.py  pyproject.toml  services.py  simple_hotkey_test.py  test_hotkey.py  test_hotkey_modes.py  test_recording_indicator.py  test_smart_template.py  text_format.py  transcripts.example.json  transcripts.json  user_dictionary.example.json  user_dictionary.json  voice_data_export_20251004_163150.json  voice_data_export_20251008_150316.json  voice_stats.example.json  voice_stats.json  智能模板切换功能说明.md
flyrec/: __init__.py  env.py  recognizers.py  smart_template.py  user_dictionary.py
