[project]
name = "flyrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aliyun-python-sdk-core>=2.16.0",
    "dashscope>=1.24.6",
    "flask>=3.1.2",
    "keyboard>=0.13.5",
    "pillow>=11.3.0",
    "psutil>=7.1.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
    "pywin32>=311",
    "requests==2.31.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "websocket-client>=1.8.0",
]
